<resources>
    <string name="app_name">Go4Lunch</string>

    <!-- Toolbar title -->
    <string name="title_restaurant">I\'m Hungry!</string>
    <string name="title_workmates">Available workmates</string>

    <!-- Menu item -->
    <string name="search_menu">Search</string>
    <string name="bottom_menu_map">Map view</string>
    <string name="bottom_menu_list">List view</string>
    <string name="bottom_menu_workmates">Workmates</string>
    <string name="lunch_menu">YOUR LUNCH</string>
    <string name="settings_menu">SETTINGS</string>
    <string name="logout_menu">LOGOUT</string>

    <!-- Image description -->
    <string name="description_restaurant_image">Restaurant image</string>
    <string name="description_person_icon">Person icon</string>
    <string name="description_star_icon">Star icon</string>
    <string name="description_profile_image">Profile image</string>
    <string name="description_location_button">Location button</string>
    <string name="description_app_logo">App logo</string>
    <string name="description_background_image">Background image</string>
    <string name="description_check_button">Select restaurant button</string>
    <string name="description_open_drawer">Open drawer</string>
    <string name="description_close_drawer">Close drawer</string>
    <string name="description_chat_icon">Chat icon</string>
    <string name="description_send_icon">Send icon</string>
    <string name="description_scroll_to_bottom_button">Scroll to bottom button</string>

    <!-- Button text -->
    <string name="sign_in_google">Sign in with Google</string>
    <string name="sign_in_facebook">Sign in with Facebook</string>
    <string name="button_call">Call</string>
    <string name="button_like">Like</string>
    <string name="button_website">Website</string>

    <!-- Placeholder -->
    <string name="slogan">Find a nice restaurant and invite your co-workers for lunch!</string>

    <string name="workmate_count">(%d)</string>
    <string name="unknown_hours">Unknown hours</string>
    <string name="open_until">Open until %s%s</string>
    <string name="always_open">Open 24/7</string>
    <string name="closing_soon">Closing in less than an hour</string>
    <string name="closed_until">Closed. Open %sat %s</string>
    <string name="tomorrow">tomorrow</string>
    <string name="no_rating_available">No rating available</string>

    <string name="workmate_eating_at">%s is eating at %s</string>
    <string name="you_eating_at">You are eating at %s</string>
    <string name="workmate_not_decided">%s hasn\'t decided yet</string>
    <string name="you_not_decided">You haven\'t decided yet</string>

    <string name="you_are_joining">You are joining!</string>
    <string name="workmate_is_joining">%s is joining!</string>

    <string name="search_restaurants_by_name">Search by name</string>

    <string name="message">Message</string>
    <string name="no_chat_room_messages">No messages yet in this chat room</string>
    <string name="notification_title">It is lunch time!</string>
    <string name="notification_big_text_with_workmates">You are going with %s</string>
    <string name="notification_big_text_without_workmates">You are going by yourself</string>

    <string name="enable_midday_notification">Enable midday notification</string>

    <!-- Snackbar message -->
    <string name="default_login_error">Login failed: an error occurred</string>
    <string name="no_internet_error">Login failed: no internet connection</string>
    <string name="invalid_account_error">Login failed: invalid account name</string>
    <string name="invalid_user_error">Login failed: account has been disabled</string>
    <string name="timeout_error">Login failed: connection timed out</string>
    <string name="invalid_credentials_error">Login failed: malformed or expired credentials</string>
    <string name="user_collision_error">Login failed: account already exists</string>

    <!-- Alert dialog -->
    <string name="mandatory_permission_title">The location permission is denied</string>
    <string name="mandatory_permission_message">This app requires the location permission to run. Do you want to be redirected to the settings to grant the permission?</string>
    <string name="positive_button_text">Yes, go to settings</string>
    <string name="negative_button_text">No, exit the app</string>

    <!-- Third part ID -->
    <string name="facebook_app_id" translatable="false">5020438924692715</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb5020438924692715</string>
</resources>