<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.DetailActivity"
    >

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/description_restaurant_image"
        app:layout_constraintHeight_percent=".4"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:background="@color/orange"
        app:layout_constraintBottom_toTopOf="@id/call_btn"
        app:layout_constraintTop_toBottomOf="@id/image"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="36dp"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toTopOf="@id/header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        >

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/custom_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_check"
            android:button="@color/white"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image"
        tools:text="Le Zinc"
        />

    <TextView
        android:id="@+id/type_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@id/name"
        tools:text="French - 12 rue du Faubourg Poissonière"
        />

    <ImageView
        android:id="@+id/star1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:contentDescription="@string/description_star_icon"
        android:src="@drawable/ic_rate"
        app:layout_constraintStart_toEndOf="@id/name"
        app:layout_constraintTop_toTopOf="@id/name"
        />

    <ImageView
        android:id="@+id/star2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_star_icon"
        android:src="@drawable/ic_rate"
        app:layout_constraintStart_toEndOf="@id/star1"
        app:layout_constraintTop_toTopOf="@id/name"
        />

    <ImageView
        android:id="@+id/star3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_star_icon"
        android:src="@drawable/ic_rate"
        app:layout_constraintStart_toEndOf="@id/star2"
        app:layout_constraintTop_toTopOf="@id/name"
        />

    <Button
        android:id="@+id/call_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_call"
        android:text="@string/button_call"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toStartOf="@id/like_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/type_address"
        />

    <Button
        android:id="@+id/like_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_favorite_on"
        android:text="@string/button_like"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toStartOf="@id/website_btn"
        app:layout_constraintStart_toEndOf="@id/call_btn"
        app:layout_constraintTop_toTopOf="@id/call_btn"
        />

    <Button
        android:id="@+id/website_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:drawableTop="@drawable/ic_website"
        android:text="@string/button_website"
        android:textColor="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/like_btn"
        app:layout_constraintTop_toTopOf="@id/call_btn"
        />

    <View
        android:id="@+id/horizontal_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="#D3D3D3"
        app:layout_constraintTop_toBottomOf="@id/call_btn"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/horizontal_line"
        tools:listitem="@layout/item_workmate"
        />

</androidx.constraintlayout.widget.ConstraintLayout>