<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

    <ImageView
        android:id="@+id/thumbnail_img"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/description_restaurant_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/black"
        />

    <TextView
        android:id="@+id/name_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/address_lbl"
        app:layout_constraintEnd_toStartOf="@id/distance_lbl"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Le Zinc"
        />

    <TextView
        android:id="@+id/address_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/gray_dark"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toTopOf="@id/opening_hours_lbl"
        app:layout_constraintEnd_toStartOf="@id/coworker_img"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_lbl"
        tools:text="French - 2 Rue du Vivienne"
        />

    <TextView
        android:id="@+id/opening_hours_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_dark"
        app:layout_constrainedWidth="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/no_rating_lbl"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_lbl"
        tools:text="Open until 7pm hey yo hi hi what again"
        />

    <TextView
        android:id="@+id/distance_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/thumbnail_img"
        app:layout_constraintTop_toTopOf="@id/name_lbl"
        tools:text="120m"
        />

    <ImageView
        android:id="@+id/coworker_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_person_icon"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@id/coworker_count_lbl"
        app:layout_constraintEnd_toStartOf="@id/coworker_count_lbl"
        />

    <TextView
        android:id="@+id/coworker_count_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_dark"
        app:layout_constraintBaseline_toBaselineOf="@id/address_lbl"
        app:layout_constraintEnd_toEndOf="@id/distance_lbl"
        tools:text="(2)"
        />

    <TextView
        android:id="@+id/no_rating_lbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_rating_available"
        android:textColor="@color/gray_dark"
        app:layout_constraintBaseline_toBaselineOf="@id/opening_hours_lbl"
        app:layout_constraintEnd_toEndOf="@id/distance_lbl"
        />

    <ImageView
        android:id="@+id/star3_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_star_icon"
        android:src="@drawable/ic_rate"
        app:layout_constraintEnd_toStartOf="@id/star2_img"
        app:layout_constraintBottom_toBottomOf="@id/opening_hours_lbl"
        />

    <ImageView
        android:id="@+id/star2_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_star_icon"
        android:src="@drawable/ic_rate"
        app:layout_constraintEnd_toStartOf="@id/star1_img"
        app:layout_constraintBottom_toBottomOf="@id/opening_hours_lbl"
        />

    <ImageView
        android:id="@+id/star1_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/description_star_icon"
        android:src="@drawable/ic_rate"
        app:layout_constraintEnd_toEndOf="@id/distance_lbl"
        app:layout_constraintBottom_toBottomOf="@id/opening_hours_lbl"
        />

</androidx.constraintlayout.widget.ConstraintLayout>